--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ a {
 
 nav {
   text-align: center;
+  margin: 10px 0px;
 }
 
 nav img {
@@ -38,6 +39,9 @@ nav a {
 
 .content {
   width: 100%;
+  height: 500px;
+  margin: 10px auto;
+  overflow: scroll;
 }
 
 /* Content Header */
@@ -46,6 +50,7 @@ nav a {
   background-image: url("https://content.codecademy.com/courses/web-101/unit-6/htmlcss1-img_burgerphoto.jpeg");
   background-position: center;
   background-size: cover;
+  height: 320px;
 }
 
 .header h1 {
@@ -56,12 +61,15 @@ nav a {
   font-weight: 300;
   line-height: 40px;
   width: 68%;
+  padding: 20px;
+  margin: 0px auto;
 }
 
 /* Content Body */
 
 .content .body {
   width: 90%;
+  margin: 0 auto;
 }
 
 .body p {
@@ -79,6 +87,10 @@ nav a {
   color: #05A8AA;
   display: block;
   font-weight: 700;
+  width: 200px;
+  padding: 20px;
+  margin: 40px auto;
+  border: solid blue;
 }
 
 .button:hover {
@@ -90,12 +102,18 @@ nav a {
 /* Content Nutrition */
 
 ul.nutrition {
+  padding: 20px;
+
 }
 
 ul.nutrition li {
   display: inline-block;
   background-color: #05A8AA;
   list-style: none;
+  width: 200px;
+  padding: 10px 20px;
+  margin-bottom: 3px;
+
 }
 
 .nutrition .category {
